// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcInputField renders properly with the given state "error" 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-5"
  >
    <span
      class="ec-input-field__label-text"
    >
      label test
    </span>
     
    <span
      class="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    aria-describedby="ec-input-field-error-5"
    class="ec-input-field__input ec-input-field__input--has-error"
    id="ec-input-field-5"
    type="text"
  />
   
  <!---->
   
  <div
    class="ec-input-field__error-text"
    id="ec-input-field-error-5"
  >
    error msg
  </div>
</div>
`;

exports[`EcInputField renders properly without label 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-7"
  >
    <!---->
     
    <span
      class="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    id="ec-input-field-7"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField renders properly without note 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-9"
  >
    <span
      class="ec-input-field__label-text"
    >
      label test
    </span>
     
    <!---->
  </label>
   
  <input
    class="ec-input-field__input"
    id="ec-input-field-9"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField renders with the attrs min and max 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-11"
  >
    <span
      class="ec-input-field__label-text"
    >
      label test
    </span>
     
    <span
      class="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    id="ec-input-field-11"
    max="10"
    min="5"
    type="number"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField should display properly with the given props 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-3"
  >
    <span
      class="ec-input-field__label-text"
    >
      label test
    </span>
     
    <span
      class="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input"
    id="ec-input-field-3"
    type="text"
  />
   
  <!---->
   
  <!---->
</div>
`;

exports[`EcInputField should render given icon 1`] = `
<div
  class="ec-input-field"
>
  <label
    class="ec-input-field__label"
    for="ec-input-field-21"
  >
    <span
      class="ec-input-field__label-text"
    >
      label test
    </span>
     
    <span
      class="ec-input-field__note"
    >
      note test
    </span>
  </label>
   
  <input
    class="ec-input-field__input ec-input-field__input--has-icon"
    id="ec-input-field-21"
    type="text"
  />
   
  <div
    class="ec-input-field__icon-wrapper"
  >
    <svg
      class="ec-input-field__icon ec-icon"
      height="20"
      width="20"
    >
      <use
        xlink:href="#ec-simple-check"
      />
    </svg>
  </div>
   
  <!---->
</div>
`;

exports[`EcInputField should render given icon with given size 1`] = `
<div
  class="ec-input-field__icon-wrapper"
>
  <svg
    class="ec-input-field__icon ec-icon"
    height="40"
    width="40"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
</div>
`;
